--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <title>Client</title>
     <base href="/" />
 
-    <meta nomCommun="viewport" content="width=device-width, initial-scale=1" />
+    <meta nomcommun="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="hhh.ico" />
   </head>
   <body>
